[package]
name = "haze"
version = "1.6.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2024"
repository = "https://github.com/icewind1991/haze"
license = "MIT"
description = "Easy setup and management of Nextcloud test instances using docker"

[dependencies]
bollard = "0.18.1"
maplit = "1.0.2"
camino = { version = "1.1.7", features = ["serde1"] }
tokio = { version = "1.38.0", features = ["fs", "macros", "signal", "rt-multi-thread"] }
parse-display = "0.10.0"
futures-util = "0.3.30"
termion = "4.0.1"
opener = "0.7.1"
toml = "0.8.14"
directories-next = "2.0.0"
serde = "1.0.203"
serde_json = "1.0.117"
petname = "2.0.2"
reqwest = { version = "0.12.4", default-features = false }
tar = "0.4.41"
flate2 = "1.0.30"
async-trait = "0.1.80"
enum_dispatch = "0.3.13"
miette = { version = "7.2.0", features = ["fancy"] }
shell-words = "1.1.0"
warp = "0.3"
tokio-stream = { version = "0.1.15", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hyper-reverse-proxy = { version = "0.5.2-dev", git = "https://github.com/felipenoris/hyper-reverse-proxy" }
hyper = "0.14.29"
atty = "0.2.14"
git2 = { version = "0.20.0", default-features = false }

[profile.release]
lto = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/haze.{ format }"
bin-dir = "{ bin }{ format }"
